# trajectory_smoothing

traj/: package.xml
traj/config/: demo.rviz
traj/launch/: sim_demo.launch
traj/launch/include/: load_demo_arm.launch.xml
traj/notebooks/: motion_equations.ipynb
traj/scripts/: demo  discrete_demo  discrete_demo_1d  dummy_joint_trajectory_server  example_toppra_s_variable  example_toppra_time_domain.py  generate_trajectory_equations  nonlinear_seven_segment  parameterize_path_example  plot_bag  seven_segment_example  synchronized_segment_example.py  synchronized_traj_example.py  traj_segment_example
traj/src/traj/: __init__.py  chain_rule.py  segment_planning.py  segmented_trajectory.py  traj_segment.py  trajectory.py
traj/test/: test_chain_rule.py  test_segmented_trajectory.py
traj/urdf/: demo_arm.urdf.xacro
