<?xml version="1.0"?>
<package format="2">
  <name>traj</name>
  <version>0.0.0</version>
  <description>Python library for trjactory manipulation</description>

  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pytest</exec_depend>
  <exec_depend>python3-sympy</exec_depend>

  <!-- Needed for launching the demo -->
  <!-- <exec_depend>fanuc_m20ib_support</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
</package>
